style(eww): resized scale and fixed clipping

--- a/dot_config/eww/eww.scss
+++ b/dot_config/eww/eww.scss
@@ -33,6 +33,8 @@ scale {
   $bg: $bg3;
   $bgh: $bg5;
   $bgs: $orange;
+  $padding: 7px;
+  padding: 0 $padding 0 $padding;
 
   contents {
     background-color: $bg;
@@ -43,9 +45,9 @@ scale {
 
     slider {
       background-color: $bgs;
-      min-width: 10px;
-      min-height: 10px;
-      margin: -3px;
+      min-width: 14px;
+      min-height: 14px;
+      margin: -6px;
       border-radius: 100%;
     }
   }
